--- a/store/.env.local
+++ b/store/.env.local
@@ -1,4 +1,4 @@
-MONGODB_URI=mongodb://fantacyuser:newfantacypass@localhost:27017/fantacy
+MONGODB_URI=mongodb://fantacyuser:newrfantacypass@localhost:27017/fantacy
 # MONGODB_URI=mongodb://localhost:27017/fantacy
 
 JWT_SECRET=fantacysecret_key
