--- a/admin/src/config.yaml
+++ b/admin/src/config.yaml
@@ -1,4 +1,4 @@
-MONGO_URL: "mongodb://fantacyuser:newfantacypass@localhost:27017/fantacy?authSource=admin"
+MONGO_URL: "mongodb://fantacyuser:newrfantacypass@localhost:27017/fantacy?authSource=admin"
 # MONGO_URL: "mongodb://localhost:27017/fantacy"
 
 # MONGO_URL: "mongodb+srv://dbuQuickTok:qFn9Mkq5rsvELv50@quicktok.ov4sst5.mongodb.net/?retryWrites=true&w=majority"
